FIX: Text fields with dock fill did not cover the whole section (#616)
* FIX: Text fields with dock fill did not cover the whole section

* FIX: Label of a field with dock set to fill was displayed

--- a/frontend-html/src/gui/Workbench/ScreenArea/FormView/FormRoot.module.scss
+++ b/frontend-html/src/gui/Workbench/ScreenArea/FormView/FormRoot.module.scss
@@ -22,4 +22,6 @@ along with ORIGAM. If not, see <http://www.gnu.org/licenses/>.
   flex-grow: 1;
   overflow: auto;
   background-color: transparent;
+  display: flex;
+  flex-direction: column;
 }
